<resources>
    <string name="app_name">Quizz</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="not_a_member_signup">NOT A MEMBER? SIGN UP</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
