<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16x"
        android:layout_weight="1"
        android:padding="@dimen/dimen_48x"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingRight="@dimen/dimen_64x"
        android:paddingTop="@dimen/dimen_16x"
        app:srcCompat="@drawable/ic_trophy" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingRight="@dimen/dimen_32x">

        <EditText
           android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingRight="@dimen/dimen_32x">

        <EditText
            android:id="@+id/emailEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingRight="@dimen/dimen_32x"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/passwordEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32x"
        android:layout_marginEnd="@dimen/dimen_32x"
        android:layout_marginTop="@dimen/dimen_32x"
        android:gravity="center"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingRight="@dimen/dimen_32x"
        android:paddingTop="@dimen/dimen_16x"
        android:text="@string/forgot_password"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/registerAppCompactButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16x"
        android:layout_marginLeft="@dimen/dimen_32x"
        android:layout_marginRight="@dimen/dimen_32x"
        android:text="@string/sign_up" />


</LinearLayout>
